mul1/solution1/sim/wrapc/err.log
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp: In function ‘int main()’:
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:15:5: error: redeclaration of ‘in A’
  in A =3;
     ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:10:5: note: ‘in A’ previously declared here
  in A =2;
     ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:16:5: error: redeclaration of ‘in B’
  in B =3;
     ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:11:5: note: ‘in B’ previously declared here
  in B =2;
     ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:17:6: error: redeclaration of ‘out C’
  out C;
      ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:12:6: note: ‘out C’ previously declared here
  out C;
      ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:20:5: error: redeclaration of ‘in A’
  in A =4;
     ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:10:5: note: ‘in A’ previously declared here
  in A =2;
     ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:21:5: error: redeclaration of ‘in B’
  in B =4;
     ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:11:5: note: ‘in B’ previously declared here
  in B =2;
     ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:22:6: error: redeclaration of ‘out C’
  out C;
      ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:12:6: note: ‘out C’ previously declared here
  out C;
      ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:25:5: error: redeclaration of ‘in A’
  in A =5;
     ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:10:5: note: ‘in A’ previously declared here
  in A =2;
     ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:26:5: error: redeclaration of ‘in B’
  in B =5;
     ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:11:5: note: ‘in B’ previously declared here
  in B =2;
     ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:27:6: error: redeclaration of ‘out C’
  out C;
      ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:12:6: note: ‘out C’ previously declared here
  out C;
      ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:30:5: error: redeclaration of ‘in A’
  in A =1;
     ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:10:5: note: ‘in A’ previously declared here
  in A =2;
     ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:31:5: error: redeclaration of ‘in B’
  in B =1;
     ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:11:5: note: ‘in B’ previously declared here
  in B =2;
     ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:32:6: error: redeclaration of ‘out C’
  out C;
      ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:12:6: note: ‘out C’ previously declared here
  out C;
      ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:35:5: error: redeclaration of ‘in A’
  in A =3;
     ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:10:5: note: ‘in A’ previously declared here
  in A =2;
     ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:36:5: error: redeclaration of ‘in B’
  in B =3;
     ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:11:5: note: ‘in B’ previously declared here
  in B =2;
     ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:37:6: error: redeclaration of ‘out C’
  out C;
      ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:12:6: note: ‘out C’ previously declared here
  out C;
      ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:40:5: error: redeclaration of ‘in A’
  in A =5;
     ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:10:5: note: ‘in A’ previously declared here
  in A =2;
     ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:41:5: error: redeclaration of ‘in B’
  in B =5;
     ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:11:5: note: ‘in B’ previously declared here
  in B =2;
     ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:42:6: error: redeclaration of ‘out C’
  out C;
      ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:12:6: note: ‘out C’ previously declared here
  out C;
      ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:45:5: error: redeclaration of ‘in A’
  in A =6;
     ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:10:5: note: ‘in A’ previously declared here
  in A =2;
     ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:46:5: error: redeclaration of ‘in B’
  in B =6;
     ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:11:5: note: ‘in B’ previously declared here
  in B =2;
     ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:47:6: error: redeclaration of ‘out C’
  out C;
      ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:12:6: note: ‘out C’ previously declared here
  out C;
      ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:50:5: error: redeclaration of ‘in A’
  in A =7;
     ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:10:5: note: ‘in A’ previously declared here
  in A =2;
     ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:51:5: error: redeclaration of ‘in B’
  in B =7;
     ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:11:5: note: ‘in B’ previously declared here
  in B =2;
     ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:52:6: error: redeclaration of ‘out C’
  out C;
      ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:12:6: note: ‘out C’ previously declared here
  out C;
      ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:55:5: error: redeclaration of ‘in A’
  in A =8;
     ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:10:5: note: ‘in A’ previously declared here
  in A =2;
     ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:56:5: error: redeclaration of ‘in B’
  in B =8;
     ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:11:5: note: ‘in B’ previously declared here
  in B =2;
     ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:57:6: error: redeclaration of ‘out C’
  out C;
      ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:12:6: note: ‘out C’ previously declared here
  out C;
      ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:60:5: error: redeclaration of ‘in A’
  in A =9;
     ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:10:5: note: ‘in A’ previously declared here
  in A =2;
     ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:61:5: error: redeclaration of ‘in B’
  in B =9;
     ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:11:5: note: ‘in B’ previously declared here
  in B =2;
     ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:62:6: error: redeclaration of ‘out C’
  out C;
      ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:12:6: note: ‘out C’ previously declared here
  out C;
      ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:65:5: error: redeclaration of ‘in A’
  in A =10;
     ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:10:5: note: ‘in A’ previously declared here
  in A =2;
     ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:66:5: error: redeclaration of ‘in B’
  in B =10;
     ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:11:5: note: ‘in B’ previously declared here
  in B =2;
     ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:67:6: error: redeclaration of ‘out C’
  out C;
      ^
/home/ramesh/Downloads/hls/multi/multiplier_tb.cpp:12:6: note: ‘out C’ previously declared here
  out C;
      ^
make: *** [cosim.tv.mk:65: obj/multiplier_tb.cpp_pre.cpp.tb.o] Error 1
